# tea_subscription_rs

./: Cargo.toml
entity/: Cargo.toml
entity/src/: customer.rs  customer_subscription.rs  lib.rs  prelude.rs  subscription.rs  subscription_tea.rs  tea.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250519_170202_create_teas.rs  m20250519_171144_create_customers.rs  m20250519_172607_create_subscriptions.rs  m20250519_173643_create_subscription_teas.rs  m20250519_174640_create_customer_subscriptions.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
src/: main.rs
