[package]
name = "tea_subscription_rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration", "entity", "service"]

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.11", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "mock",
  "debug-print",
] }
dotenvy = "0.15.7"
migration = { path = "migration" }
entity = { path = "entity" }
service = { path = "service" }
serde = { version = "1.0.219", features = ["derive"] }

[lints.clippy]
pedantic = "warn"
