[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13.1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.11", features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
] }

[lints.clippy]
pedantic = "warn"
